Updated mobile members sections to include correct titles and add spacing

--- a/src/style/modules/_members.scss
+++ b/src/style/modules/_members.scss
@@ -862,6 +862,7 @@
         font-weight: bold;
         margin-top: 50px;
         display: block;
+        margin-bottom: 25px;
       }
       .company-tier-logos {
         &.platinum {
